--- a/SignalRWebUI/Views/Shared/Components/_LayoutNavbarComponentPartial/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_LayoutNavbarComponentPartial/Default.cshtml
@@ -44,9 +44,9 @@
     </script>
 
     <div class="logo-header">
-        <a href="index.html" class="logo">
-            SignalR Admin
-        </a>
+        <span class="logo">
+            MK Restoran Admin
+        </span>
         <button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse"
             data-target="collapse" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -70,18 +70,6 @@
                 <li class="nav-item dropdown hidden-caret">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="la la-envelope"></i>
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Gelen Mesajlar</a>
-                        <a class="dropdown-item" href="#">Rezervasyonlar</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">İletişim</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown hidden-caret">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="la la-bell"></i>
                         <span class="notification" id="notificationcount"></span>
                     </a>
@@ -95,7 +83,7 @@
                             </div>
                         </li>
                         <li>
-                            <a class="see-all" href="javascript:void(0);"> <strong>See all notifications</strong> <i
+                            <a class="see-all" href="/Notifications/Index/"> <strong>Tüm Bildirimler</strong> <i
                                     class="la la-angle-right"></i> </a>
                         </li>
                     </ul>
@@ -103,7 +91,7 @@
                 <li class="nav-item dropdown">
                     <a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false"> <img
                             src="~/Ready-Bootstrap-Dashboard-master/assets/img/profile.jpg" alt="user-img" width="36"
-                            class="img-circle"><span>Hizrian</span></span> </a>
+                            class="img-circle"><span>@(User.Identity.IsAuthenticated ? User.Identity.Name : "Misafir")</span></span> </a>
                     <ul class="dropdown-menu dropdown-user">
                         <li>
                             <div class="user-box">
@@ -111,21 +99,23 @@
                                         alt="user"></div>
                                 <div class="u-text">
                                     <h4>Admin</h4>
-                                    <p class="text-muted">SignalR@gmail.com</p><a href="profile.html"
-                                        class="btn btn-rounded btn-danger btn-sm">Menüyü Gör</a>
+                                    <p class="text-muted">@(User.Identity.IsAuthenticated ? User.FindFirst(System.Security.Claims.ClaimTypes.Email)?.Value ?? User.Identity.Name : "Giriş yapılmadı")</p>
                                 </div>
                             </div>
                         </li>
+                        <div class="dropdown-divider"></div> 
+                        <a class="dropdown-item" href="/Menu/Index"><i class="ti-user"></i> Menü</a> 
+                         
+                        <a class="dropdown-item" href="/Setting/Index/"></i> Ayarlar</a> 
+                        
+                        <a class="dropdown-item" href="/Booking/Index/"><i class="ti-email"></i> Rezervasyonlar</a> 
+                        
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#"><i class="ti-user"></i> Menü</a>
-                        <a class="dropdown-item" href="#"></i> Ayarlar</a>
-                        <a class="dropdown-item" href="#"><i class="ti-email"></i> Rezervasyonlar</a>
+                        <a class="dropdown-item" href="#"><i class="ti-settings"></i> Dashboard</a> 
+                        
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#"><i class="ti-settings"></i> Dashboard</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#"><i class="fa fa-power-off"></i> Çıkış Yap</a>
+                        <a class="dropdown-item" href="/Login/Logout"><i class="fa fa-power-off"></i> Çıkış Yap</a> 
                     </ul>
-                    <!-- /.dropdown-user -->
                 </li>
             </ul>
         </div>
