--- a/SignalRWebUI/Views/Shared/Components/_UILayoutFooterComponentPartial/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_UILayoutFooterComponentPartial/Default.cshtml
@@ -33,7 +33,7 @@
                 </div>
                 <div class="col-md-4 footer-col">
                     <div class="footer_detail">
-                        <a href="/Default/Index/" class="footer-logo">
+                        <a href="/Default/Index/@ViewBag.v" class="footer-logo">
                             @item.FooterTitle
                         </a>
                         <p>
@@ -56,8 +56,8 @@
             </div>
             <div class="footer-info">
                 <p>
-                    &copy; <span id="displayYear"></span>Tüm Hakları Saklıdır.
-                    <a href="https://html.design/">SignalR Restoran</a><br><br>
+                    &copy; <span id="displayYear"></span> Tüm Hakları Saklıdır.
+                    <a href="https://html.design/">MK Restoran</a><br><br>
                     &copy; <span id="displayYear"></span> Geliştiren 
                     <a href="https://themewagon.com/" target="_blank">Musa Koç</a>
                 </p>
