--- a/SignalRWebUI/Views/ProgressBars/Index.cshtml
+++ b/SignalRWebUI/Views/ProgressBars/Index.cshtml
@@ -74,15 +74,15 @@
                 `)
                 });
 
-                connection.on("ReceiveProductCountByCategoryNameDrink", (value7) => {
+                connection.on("ReceiveProductCount", (productCountForProgress) => {
                     $("#ReceiveProductCountByCategoryNameDrinkProgress").empty();
                     $("#ReceiveProductCountByCategoryNameDrinkProgress").append(`
                         <div class="d-flex justify-content-between mb-1">
-                        <span class="text-muted">İçecek Kategori Sayısı</span>
-                        <span class="text-muted fw-bold">${value7}</span>
+                        <span class="text-muted">Toplam Ürün Sayısı</span>
+                        <span class="text-muted fw-bold">${productCountForProgress}</span>
                         </div>
                         <div class="progress mb-2" style="height: 7px;">
-                        <div class="progress-bar bg-warning" role="progressbar" style="width: ${value7}%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="${value7}%"></div>
+                        <div class="progress-bar bg-warning" role="progressbar" style="width: ${productCountForProgress}%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="${productCountForProgress}%"></div>
                         </div>
                 `)
                 });
@@ -98,6 +98,18 @@
                                     <div class="progress-bar bg-dark" role="progressbar" style="width: ${value8}%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="${value8}%"></div>
                                     </div>
                             `)
+                });
+ 
+                connection.on("ReceiveCategoryCount", (categoryCount) => {
+                    $("#categorycount").text(categoryCount);
+                });
+ 
+                connection.on("ReceiveProductCount", (productCount) => {
+                    $("#productcount").text(productCount);
+                });
+ 
+                connection.on("ReceiveBookingCount", (bookingCount) => {
+                    $("#bookingcount").text(bookingCount);
                 });
             });
 
@@ -145,7 +157,7 @@
                                 <div class="row">
                                     <div class="col-5">
                                         <div class="icon-big text-center icon-warning">
-                                            <i class="la la-pie-chart text-warning"></i>
+                                            <i class="la la-shopping-cart text-warning"></i>
                                         </div>
                                     </div>
                                     <div class="col-7 d-flex align-items-center">
@@ -160,7 +172,7 @@
                                 <div class="row">
                                     <div class="col-5">
                                         <div class="icon-big text-center">
-                                            <i class="la la-heart-o text-primary"></i>
+                                            <i class="la la-cutlery text-primary"></i>
                                         </div>
                                     </div>
                                     <div class="col-7 d-flex align-items-center">
@@ -175,13 +187,13 @@
                                 <div class="row">
                                     <div class="col-5">
                                         <div class="icon-big text-center">
-                                            <i class="la la-large text-success"></i>
+                                            <i class="la la-list-alt text-success"></i>
                                         </div>
                                     </div>
                                     <div class="col-7 d-flex align-items-center">
                                         <div class="numbers">
-                                            <p class="card-category">Kategori Sayısı</p>
-                                            <h4 class="card-title">30</h4>
+                                            <p class="card-category">Kategori Sayısı</p> 
+                                            <h4 class="card-title" id="categorycount"></h4> 
                                         </div>
                                     </div>
                                 </div>
@@ -195,8 +207,8 @@
                                     </div>
                                     <div class="col-7 d-flex align-items-center">
                                         <div class="numbers">
-                                            <p class="card-category">Ürün Sayısı</p>
-                                            <h4 class="card-title">25</h4>
+                                            <p class="card-category">Ürün Sayısı</p> 
+                                            <h4 class="card-title" id="productcount"></h4> 
                                         </div>
                                     </div>
                                 </div>
@@ -210,8 +222,8 @@
                                     </div>
                                     <div class="col-7 d-flex align-items-center">
                                         <div class="numbers">
-                                            <p class="card-category">Rezervasyon Sayısı</p>
-                                            <h4 class="card-title">146</h4>
+                                            <p class="card-category">Rezervasyon Sayısı</p> 
+                                            <h4 class="card-title" id="bookingcount"></h4> 
                                         </div>
                                     </div>
                                 </div>
