--- a/SignalRWebUI/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
@@ -17,7 +17,7 @@
                 <div class="collapse in" id="collapseExample" aria-expanded="true" style="">
                     <ul class="nav">
                         <li>
-                            <a href="#profile">
+                            <a href="/Menu/Index/">
                                 <span class="link-collapse">Menüyü Gör</span>
                             </a>
                         </li>
@@ -36,56 +36,65 @@
             </div>
         </div>
         <ul class="nav">
-            
+
             <li class="nav-item">
-                <a href="/Dashboard/Index/">
-                    <i class="la la-dashboard"></i>
-                    <p>Siteye Git</p>
-                    <span class="badge badge-count">5</span>
+                <a href="/ProgressBars/Index/">
+                    <i class="la la-bar-chart"></i>
+                    <p>Anlık Durum Çubuğu</p>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="index.html">
+                <a href="/Statistic/Index/">
+                    <i class="la la-pie-chart"></i>
+                    <p>İstatistikler</p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/Default/Index/">  
                     <i class="la la-dashboard"></i>
-                    <p>Dashboard</p>
-                    <span class="badge badge-count">5</span>
+                    <p>Siteye Git</p>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="/Menu/Index/">
-                    <i class="la la-table"></i>
+                    <i class="la la-book"></i>
                     <p>Menüyü Gör</p>
-                    <span class="badge badge-count">14</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="/Category/Index/">
-                    <i class="la la-keyboard-o"></i>
+                    <i class="la la-list-alt"></i>
                     <p>Kategoriler</p>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="/Product/Index">
-                    <i class="la la-th"></i>
+                    <i class="la la-cutlery"></i>
                     <p>Ürünler</p>
                  
                 </a>
             </li>
             <li class="nav-item">
                 <a href="/Booking/Index/">
-                    <i class="la la-bell"></i>
+                    <i class="la la-calendar-check-o"></i>
                     <p>Rezervasyonlar</p>
                 </a>
             </li>
             <li class="nav-item">
+                <a href="/Orders/Index/">
+                    <i class="la la-shopping-cart"></i>
+                    <p>Siparişler</p>
+                </a>
+            </li>
+            <li class="nav-item">
                 <a href="/About/Index/">
-                    <i class="la la-font"></i>
+                    <i class="la la-info-circle"></i>
                     <p>Hakkımızda</p>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="/Discount/Index/">
-                    <i class="la la-money"></i>
+                    <i class="la la-tags"></i>
                     <p>İndirimler</p>
                 </a>
             </li>
@@ -97,68 +106,50 @@
             </li>
             <li class="nav-item">
                 <a href="/Slider/Index/">
-                    <i class="la la-fonticons"></i>
+                    <i class="la la-image"></i>
                     <p>Öne Çıkanlar</p>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="/Testimonial/Index/">
-                    <i class="la la-group"></i>
+                    <i class="la la-quote-left"></i>
                     <p>Referanslar</p>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="/SocialMedia/Index/">
-                    <i class="la la-chain"></i>
+                    <i class="la la-share-alt"></i>
                     <p>Sosyal Medya</p>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/Statistic/Index/">
-                    <i class="la la-pie-chart"></i>
-                    <p>İstatistikler</p>
-                </a>
-            </li>
-            <li class="nav-item">
                 <a href="/MenuTables/Index/">
-                    <i class="la la-fonticons"></i>
+                    <i class="la la-th-large"></i>
                     <p>Masalar</p>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/TableListByStatus/Index/">
-                    <i class="la la-fonticons"></i>
+                <a href="/MenuTables/TableListByStatus/">
+                    <i class="la la-list"></i>
                     <p>Masa Durumları</p>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="/Message/Index/">
-                    <i class="la la-comments"></i>
+                    <i class="la la-envelope"></i>
                     <p>Mesaj Sayfası</p>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="/Notifications/Index/">
-                    <i class="la la-fonticons"></i>
+                    <i class="la la-bell"></i>
                     <p>Bildirimler</p>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="/Mail/Index/">
-                    <i class="la la-fonticons"></i>
+                    <i class="la la-envelope-o"></i>
                     <p>Mail İşlemleri</p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="/ProgressBars/Index/">
-                    <i class="la la-fonticons"></i>
-                    <p>Anlık Durum Çubuğu</p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="/Setting/Index/">
-                    <i class="la la-fonticons"></i>
-                    <p>Ayarlar</p>
                 </a>
             </li>
             <li class="nav-item">
@@ -169,19 +160,19 @@
             </li>
             <li class="nav-item">
                 <a href="/Setting/Index/">
-                    <i class="la la-fonticons"></i>
+                    <i class="la la-cog"></i>
                     <p>Ayarlar</p>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="/Login/LogOut/">
-                    <i class="la la-fonticons"></i>
+                    <i class="la la-sign-out"></i>
                     <p>Çıkış Yap</p>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="/Login/LogOut/">
-                    <i class="la la-fonticons"></i>
+                    <i class="la la-sign-out"></i>
                     <p>Çıkış Yap</p>
                 </a>
             </li>
