--- a/SignalRWebUI/Views/Statistic/Index.cshtml
+++ b/SignalRWebUI/Views/Statistic/Index.cshtml
@@ -88,7 +88,7 @@
                         <div class="row">
                             <div class="col-5">
                                 <div class="icon-big text-center">
-                                    <i class="la la-certificate"></i>
+                                    <i class="la la-list-alt"></i>
                                 </div>
                             </div>
                             <div class="col-7 d-flex align-items-center">
@@ -126,7 +126,7 @@
                         <div class="row">
                             <div class="col-5">
                                 <div class="icon-big text-center">
-                                    <i class="la la-check-circle"></i>
+                                    <i class="la la-thumbs-up"></i>
                                 </div>
                             </div>
                             <div class="col-7 d-flex align-items-center">
@@ -145,7 +145,7 @@
                         <div class="row">
                             <div class="col-5">
                                 <div class="icon-big text-center">
-                                    <i class="la la-close"></i>
+                                    <i class="la la-times-circle"></i>
                                 </div>
                             </div>
                             <div class="col-7 d-flex align-items-center">
@@ -167,7 +167,7 @@
                         <div class="row">
                             <div class="col-5">
                                 <div class="icon-big text-center">
-                                    <i class="la la-support"></i>
+                                    <i class="la la-coffee"></i>
                                 </div>
                             </div>
                             <div class="col-7 d-flex align-items-center">
@@ -283,7 +283,7 @@
                         <div class="row">
                             <div class="col-5">
                                 <div class="icon-big text-center">
-                                    <i class="la la-newspaper-o"></i>
+                                    <i class="la la-file-text"></i>
                                 </div>
                             </div>
                             <div class="col-7 d-flex align-items-center">
@@ -323,7 +323,7 @@
                         <div class="row">
                             <div class="col-5">
                                 <div class="icon-big text-center">
-                                    <i class="la la-facebook"></i>
+                                    <i class="la la-dollar"></i>
                                 </div>
                             </div>
                             <div class="col-7 d-flex align-items-center">
@@ -380,7 +380,7 @@
                         <div class="row">
                             <div class="col-5">
                                 <div class="icon-big text-center">
-                                    <i class="la la-home"></i>
+                                    <i class="la la-cutlery"></i>
                                 </div>
                             </div>
                             <div class="col-7 d-flex align-items-center">
